# DummyPong

./: Ball.cpp  Ball.h  Bot.cpp  Bot.h  CMakeLists.txt  DefinedStates.h  Figure.cpp  Figure.h  GameState.cpp  GameState.h  LICENSE  MenuState.cpp  MenuState.h  Multiplayer.cpp  Multiplayer.h  README.md  ScoreState.cpp  ScoreState.h  Singleplayer.cpp  Singleplayer.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  alias.h  getchar.h  main.cpp
figures/game/: ball.txt  end_screen.txt  enter_friend_name.txt  enter_name.txt  field.txt  label.txt  multi_title.txt  platform.txt  press_enter.txt  single_title.txt
figures/main_menu/: choice.txt  cursor.txt  menu.txt  title.txt
figures/score/: table.txt  title.txt
